--- a/index.html
+++ b/index.html
@@ -3,102 +3,160 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio de [Votre Nom]">
-    <title>Portfolio de [Votre Nom]</title>
+    <meta name="description" content="Portfolio de Martin Léo, étudiant en Informatique">
+    <title>Portfolio de Martin Léo</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        /* Couleurs personnalisées */
+        .primary-bg {
+            background-color: #0A0A0A; /* Noir profond */
+        }
+        .secondary-bg {
+            background-color: #1D4ED8; /* Bleu électrique */
+        }
+        .primary-text {
+            color: #1D4ED8;
+        }
+        .secondary-text {
+            color: #E5E5E5;
+        }
+
+        /* Animation de mouvement */
+        @keyframes float {
+            0% {
+                transform: translate(0, 0);
+            }
+            50% {
+                transform: translate(0, -10px);
+            }
+            100% {
+                transform: translate(0, 0);
+            }
+        }
+
+        @keyframes pulse {
+            0%, 100% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.05);
+            }
+        }
+
+        .floating {
+            animation: float 3s ease-in-out infinite;
+        }
+
+        .pulsing {
+            animation: pulse 1.5s ease-in-out infinite;
+        }
+
+        /* Effets de survol */
+        .card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 10px 30px rgba(29, 78, 216, 0.3);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .button-hover:hover {
+            background-color: #2563EB;
+            transition: background-color 0.3s ease;
+        }
+    </style>
 </head>
-<body class="bg-gray-100 text-gray-800">
+<body class="bg-gray-900 text-gray-200">
 
     <!-- Navbar -->
-    <nav class="bg-white shadow-md">
-        <div class="container mx-auto px-6 py-3 flex justify-between items-center">
-            <div class="text-xl font-semibold text-gray-900">[Votre Nom]</div>
-            <div>
-                <a href="#about" class="text-gray-600 hover:text-gray-900 px-4">À propos</a>
-                <a href="#projects" class="text-gray-600 hover:text-gray-900 px-4">Projets</a>
-                <a href="#contact" class="text-gray-600 hover:text-gray-900 px-4">Contact</a>
+    <nav class="primary-bg text-white shadow-lg">
+        <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+            <div class="text-2xl font-bold">Martin Léo</div>
+            <div class="space-x-4">
+                <a href="#about" class="hover:text-gray-300 transition">À propos</a>
+                <a href="#projects" class="hover:text-gray-300 transition">Projets</a>
+                <a href="#contact" class="hover:text-gray-300 transition">Contact</a>
             </div>
         </div>
     </nav>
 
     <!-- Hero Section -->
-    <section class="bg-gray-200 py-20">
+    <section class="primary-bg text-white py-24">
         <div class="container mx-auto text-center">
-            <h1 class="text-4xl font-bold mb-4">Bonjour, je suis [Votre Nom]</h1>
-            <p class="text-xl mb-8">Développeur web et passionné par la technologie.</p>
-            <a href="#projects" class="bg-blue-500 text-white px-6 py-3 rounded-full hover:bg-blue-600">Voir mes projets</a>
+            <h1 class="text-5xl font-bold mb-6 floating">Bonjour, je suis Martin Léo</h1>
+            <p class="text-2xl mb-10">Étudiant en CPI A2 Informatique au CESI (école d'ingénieur).</p>
+            <a href="#projects" class="button-hover bg-secondary-bg px-8 py-4 rounded-full text-lg font-semibold hover:bg-blue-600 transition">Voir mes projets</a>
         </div>
     </section>
 
     <!-- About Section -->
-    <section id="about" class="container mx-auto py-20 px-6">
-        <div class="text-center mb-12">
-            <h2 class="text-3xl font-bold">À propos de moi</h2>
+    <section id="about" class="container mx-auto py-24 px-6">
+        <div class="text-center mb-16">
+            <h2 class="text-4xl font-bold primary-text">À propos de moi</h2>
         </div>
         <div class="md:flex md:justify-center">
             <div class="md:w-2/3 text-center">
-                <p class="text-lg">
-                    Je suis un développeur passionné par la création de solutions efficaces et élégantes. Avec plusieurs années d'expérience dans le développement web, j'ai travaillé sur des projets variés allant de petits sites statiques à des applications web complexes.
+                <p class="text-lg text-gray-300 leading-relaxed">
+                    Je suis un étudiant passionné par la technologie et le développement de solutions innovantes. En tant qu'étudiant en informatique, j'aime relever des défis techniques et apprendre de nouvelles compétences pour créer des projets captivants.
                 </p>
             </div>
         </div>
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="bg-gray-100 py-20">
+    <section id="projects" class="primary-bg text-white py-24">
         <div class="container mx-auto text-center">
-            <h2 class="text-3xl font-bold mb-12">Mes Projets</h2>
+            <h2 class="text-4xl font-bold mb-16">Mes Projets</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
                 <!-- Project 1 -->
-                <div class="bg-white shadow-md rounded-lg p-6">
-                    <img src="https://via.placeholder.com/300" alt="Projet 1" class="w-full h-48 object-cover mb-4 rounded-lg">
-                    <h3 class="text-xl font-bold mb-2">Projet 1</h3>
-                    <p class="text-gray-600">Description de votre projet 1. Ce projet met en avant mes compétences en développement web.</p>
+                <div class="card bg-gray-800 text-gray-200 shadow-lg rounded-lg overflow-hidden p-6">
+                    <img src="https://via.placeholder.com/300/1D4ED8/FFFFFF?text=Projet+1" alt="Projet 1" class="w-full h-48 object-cover mb-4 rounded-lg">
+                    <h3 class="text-2xl font-bold mb-3">Projet 1</h3>
+                    <p class="text-gray-400 leading-relaxed">Ce projet démontre mes compétences en développement front-end avec une attention particulière portée à l'UX/UI.</p>
                 </div>
                 <!-- Project 2 -->
-                <div class="bg-white shadow-md rounded-lg p-6">
-                    <img src="https://via.placeholder.com/300" alt="Projet 2" class="w-full h-48 object-cover mb-4 rounded-lg">
-                    <h3 class="text-xl font-bold mb-2">Projet 2</h3>
-                    <p class="text-gray-600">Description de votre projet 2. Ce projet démontre ma maîtrise des frameworks modernes.</p>
+                <div class="card bg-gray-800 text-gray-200 shadow-lg rounded-lg overflow-hidden p-6">
+                    <img src="https://via.placeholder.com/300/1D4ED8/FFFFFF?text=Projet+2" alt="Projet 2" class="w-full h-48 object-cover mb-4 rounded-lg">
+                    <h3 class="text-2xl font-bold mb-3">Projet 2</h3>
+                    <p class="text-gray-400 leading-relaxed">Un projet utilisant des frameworks modernes comme React et Tailwind CSS pour créer des interfaces dynamiques.</p>
                 </div>
                 <!-- Project 3 -->
-                <div class="bg-white shadow-md rounded-lg p-6">
-                    <img src="https://via.placeholder.com/300" alt="Projet 3" class="w-full h-48 object-cover mb-4 rounded-lg">
-                    <h3 class="text-xl font-bold mb-2">Projet 3</h3>
-                    <p class="text-gray-600">Description de votre projet 3. Un exemple de mon expertise dans la conception UX/UI.</p>
+                <div class="card bg-gray-800 text-gray-200 shadow-lg rounded-lg overflow-hidden p-6">
+                    <img src="https://via.placeholder.com/300/1D4ED8/FFFFFF?text=Projet+3" alt="Projet 3" class="w-full h-48 object-cover mb-4 rounded-lg">
+                    <h3 class="text-2xl font-bold mb-3">Projet 3</h3>
+                    <p class="text-gray-400 leading-relaxed">Un projet backend mettant en avant mes compétences en architecture d'API et en bases de données.</p>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="container mx-auto py-20 px-6">
-        <div class="text-center mb-12">
-            <h2 class="text-3xl font-bold">Contactez-moi</h2>
+    <section id="contact" class="container mx-auto py-24 px-6">
+        <div class="text-center mb-16">
+            <h2 class="text-4xl font-bold primary-text">Contactez-moi</h2>
         </div>
         <div class="md:flex md:justify-center">
-            <form action="#" class="md:w-1/2">
+            <form action="mailto:leo.martin1@viacesi.fr" class="md:w-1/2 bg-gray-800 p-8 rounded-lg shadow-lg">
                 <div class="mb-6">
-                    <label for="name" class="block text-left text-gray-600 mb-2">Nom</label>
-                    <input type="text" id="name" class="w-full p-3 border border-gray-300 rounded-lg">
+                    <label for="name" class="block text-left text-gray-300 mb-2">Nom</label>
+                    <input type="text" id="name" class="w-full p-4 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-secondary-bg">
                 </div>
                 <div class="mb-6">
-                    <label for="email" class="block text-left text-gray-600 mb-2">Email</label>
-                    <input type="email" id="email" class="w-full p-3 border border-gray-300 rounded-lg">
+                    <label for="email" class="block text-left text-gray-300 mb-2">Email</label>
+                    <input type="email" id="email" class="w-full p-4 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-secondary-bg">
                 </div>
                 <div class="mb-6">
-                    <label for="message" class="block text-left text-gray-600 mb-2">Message</label>
-                    <textarea id="message" class="w-full p-3 border border-gray-300 rounded-lg" rows="5"></textarea>
+                    <label for="message" class="block text-left text-gray-300 mb-2">Message</label>
+                    <textarea id="message" class="w-full p-4 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-secondary-bg" rows="5"></textarea>
                 </div>
-                <button type="submit" class="bg-blue-500 text-white px-6 py-3 rounded-lg hover:bg-blue-600">Envoyer</button>
+                <button type="submit" class="button-hover bg-secondary-bg text-white px-8 py-4 rounded-lg font-semibold w-full">Envoyer</button>
             </form>
         </div>
     </section>
 
     <!-- Footer -->
-    <footer class="bg-gray-800 text-white py-6">
+    <footer class="primary-bg text-white py-6">
         <div class="container mx-auto text-center">
-            <p>&copy; 2024 [Votre Nom]. Tous droits réservés.</p>
+            <p>&copy; 2024 Martin Léo. Tous droits réservés.</p>
+            <p>Contact: <a href="mailto:leo.martin1@viacesi.fr" class="underline">leo.martin1@viacesi.fr</a></p>
         </div>
     </footer>
 
