--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <!-- Project 1 -->
             <a href="strongbox-3000.html">
                 <div class="card bg-gray-800 text-gray-200 shadow-lg rounded-lg overflow-hidden p-6">
-                    <img src="img.img\systemes-embarques-datascientest.jpg" alt="Projet 1" class="w-full h-48 object-cover mb-4 rounded-lg">
+                    <img src="systemes-embarques-datascientest.jpg" alt="Projet 1" class="w-full h-48 object-cover mb-4 rounded-lg">
                     <h3 class="text-2xl font-bold mb-3">Projet 1 : StrongBox 3000</h3>
                     <p class="text-gray-400 leading-relaxed">Ce projet démontre mes compétences en système embarqué, j'ai appris à développer mes compétences en C++.</p>
                 </div>
@@ -141,14 +141,14 @@
             <!-- Project 2 -->
             <a href="traitement-signal.html">
                 <div class="card bg-gray-800 text-gray-200 shadow-lg rounded-lg overflow-hidden p-6">
-                    <img src="img.img\master-tsi-upec-2-signaux.jpg" alt="Projet 2" class="w-full h-48 object-cover mb-4 rounded-lg">
+                    <img src="master-tsi-upec-2-signaux.jpg" alt="Projet 2" class="w-full h-48 object-cover mb-4 rounded-lg">
                     <h3 class="text-2xl font-bold mb-3">Projet 2 : traitement de signal</h3>
                     <p class="text-gray-400 leading-relaxed">Un projet utilisant mes compétences afin de traduire des signaux analogiques en numériques, etc....</p>
                 </div>
             </a>
             <!-- Project 3 -->
             <div class="card bg-gray-800 text-gray-200 shadow-lg rounded-lg overflow-hidden p-6">
-                <img src="img.img\fotor-ai-20241002113452.jpg" alt="Projet 3" class="w-full h-48 object-cover mb-4 rounded-lg">
+                <img src="fotor-ai-20241002113452 - Copie.jpg" alt="Projet 3" class="w-full h-48 object-cover mb-4 rounded-lg">
                 <h3 class="text-2xl font-bold mb-3">Projet 3 : StrongBox 2.0</h3>
                 <p class="text-gray-400 leading-relaxed">Projet en cours de développement.</p>
             </div>
