--- a/traitement-signal.html
+++ b/traitement-signal.html
@@ -129,7 +129,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10">
                 <!-- Livrable 1 -->
                 <div class="card bg-gray-800 text-gray-200 shadow-lg p-6">
-                    <img src="L1.jpg" alt="Livrable 1" class="livrable-img">
+                    <img src="L1 - Copie.jpg" alt="Livrable 1" class="livrable-img">
                     <h3 class="text-2xl font-bold mb-3">Livrable 1 : Caractéristiques d'une onde</h3>
                     <p class="text-gray-400 leading-relaxed">Proposition d'une solution de communication basée sur les caractéristiques des ondes sonores.</p>
                     <a href="Livrable 1.ipynb" class="text-blue-400 underline mt-4 block">Télécharger le livrable 1</a>
