--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio de Martin Léo, étudiant en Informatique">
-    <title>Portfolio de Martin Léo</title>
+    <meta name="description" content="Portfolio de Léo Martin, étudiant en Informatique">
+    <title>Portfolio de Léo Martin </title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
@@ -66,12 +66,12 @@
     
         .hero-background {
             position: relative;
-            background-image: url('circ1.jpg'), url('circ1.jpg'); /* URLs des circuits électroniques */
-            background-size: 300px 300px, 400px 400px; /* Ajuster les tailles */
+            background-image: url('circ1.jpg'), url('circ1.jpg'); 
+            background-size: 300px 300px, 400px 400px; 
             background-repeat: repeat, repeat;
-            animation: moveCircuits 30s linear infinite; /* Animation continue */
-            height: 300px; /* Ajuste la hauteur selon tes besoins */
-            background-blend-mode: overlay; /* Effet de fusion des images */
+            animation: moveCircuits 30s linear infinite; 
+            height: 300px; 
+            background-blend-mode: overlay;
         }
     
         .hero-content {
@@ -91,7 +91,7 @@
     <!-- Navbar -->
     <nav class="primary-bg text-white shadow-lg">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <div class="text-2xl font-bold">Martin Léo</div>
+            <div class="text-2xl font-bold">Léo Martin</div>
             <div class="space-x-4">
                 <a href="#about" class="hover:text-gray-300 transition">À propos</a>
                 <a href="#projects" class="hover:text-gray-300 transition">Projets</a>
@@ -104,8 +104,8 @@
     <!-- Hero Section avec animation de circuits -->
     <section class="hero-background">
         <div class="container mx-auto text-center hero-content animate__animated animate__fadeIn">
-            <h1 class="text-5xl font-bold mb-6 floating">Bonjour, je suis Martin Léo</h1>
-            <p class="text-2xl mb-10">Étudiant en Informatique au CESI, passionné par la technologie et l'innovation.</p>
+            <h1 class="text-5xl font-bold mb-6 floating">Bonjour, je suis Léo Martin</h1>
+            <p class="text-2xl mb-10">Étudiant en Informatique au CESI, je souhaite apprendre et effectuer le plus de découvertes possible dans ce domaine.</p>
             <a href="#projects" class="button-hover bg-secondary-bg px-8 py-4 rounded-full text-lg font-semibold hover:bg-blue-600 transition">Voir mes projets</a>
         </div>
     </section>
@@ -156,22 +156,6 @@
     </div>
 </section>
 
-
-
-    <!-- Testimonials Section -->
-    <section id="testimonials" class="container mx-auto py-24 px-6 text-center animate__animated animate__fadeInUp">
-        <h2 class="text-4xl font-bold primary-text mb-16">Témoignages</h2>
-        <div class="space-y-10">
-            <div class="bg-gray-800 p-8 rounded-lg shadow-lg">
-                <p class="text-lg text-gray-300 leading-relaxed">"Martin est un étudiant exceptionnel qui n'hésite jamais à aller au-delà des attentes. Son projet StrongBox a impressionné l'ensemble du corps enseignant."</p>
-                <p class="mt-4 text-sm text-gray-400">- Professeur Jacques</p>
-            </div>
-            <div class="bg-gray-800 p-8 rounded-lg shadow-lg">
-                <p class="text-lg text-gray-300 leading-relaxed">"Martin a une capacité incroyable à résoudre des problèmes complexes avec des solutions élégantes et efficaces."</p>
-                <p class="mt-4 text-sm text-gray-400">- Collègue Étudiant</p>
-            </div>
-        </div>
-    </section>
 
     <!-- Contact Section -->
     <section id="contact" class="container mx-auto py-24 px-6">
