--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
             <div class="space-x-4">
                 <a href="#about" class="hover:text-gray-300 transition">À propos</a>
                 <a href="#projects" class="hover:text-gray-300 transition">Projets</a>
-                <a href="#testimonials" class="hover:text-gray-300 transition">Témoignages</a>
                 <a href="#contact" class="hover:text-gray-300 transition">Contact</a>
             </div>
         </div>
@@ -105,7 +104,7 @@
     <section class="hero-background">
         <div class="container mx-auto text-center hero-content animate__animated animate__fadeIn">
             <h1 class="text-5xl font-bold mb-6 floating">Bonjour, je suis Léo Martin</h1>
-            <p class="text-2xl mb-10">Étudiant en Informatique au CESI, je souhaite apprendre et effectuer le plus de découvertes possible dans ce domaine.</p>
+            <p class="text-2xl mb-10">Étudiant en Informatique au CESI, je souhaite développer mes compétences et évoluer dans ce domaine.</p>
             <a href="#projects" class="button-hover bg-secondary-bg px-8 py-4 rounded-full text-lg font-semibold hover:bg-blue-600 transition">Voir mes projets</a>
         </div>
     </section>
@@ -119,7 +118,7 @@
         <div class="md:flex md:justify-center">
             <div class="md:w-2/3 text-center">
                 <p class="text-lg text-gray-300 leading-relaxed">
-                    Je suis passionné par le développement de solutions innovantes et les défis techniques. Je suis constamment à la recherche de nouvelles compétences pour perfectionner mes projets.
+                    Je suis actuellement en 2ème année d'école d'ingénieur, et je souhaite vous partager les différents projets que j'ai effectués au cours de mon apprentissage. Ce Portfolio n'est que temporaire, je compte l'améliorer afin de développer mes compétences. 
                 </p>
             </div>
         </div>
