--- a/index.html
+++ b/index.html
@@ -338,15 +338,16 @@
             </div>
         </div>
 
-        <!-- Projet 4 : En cours -->
+        <!-- Projet 4 : Terminé -->
         <div class="portfolio-box">
-            <img src="images/p4.jpg" alt="Projet 4">
+            <img src="images/BDDd.jpg" alt="Projet 7">
             <div class="portfolio-layer">
-                <h4>Projet 4 : Application web complète (Dév web)</h4>
-                <p>Ce projet illustre mon savoir-faire en développement web...</p>
-                <a href="#" class="in-progress"><i class='bx bx-link-external'></i></a>
+                <h4>Projet 4 : Gestion de Bases De Données</h4>
+                <p>Un projet de BDD mettant en avant mes compétences...</p>
+                <a href="projet4.html"><i class='bx bx-link-external'></i></a>
             </div>
         </div>
+
 
         <!-- Projet 5 : En cours -->
         <div class="portfolio-box">
@@ -367,6 +368,17 @@
                 <a href="#" class="in-progress"><i class='bx bx-link-external'></i></a>
             </div>
         </div>
+
+        <!-- Projet 7 : En cours -->
+        <div class="portfolio-box">
+            <img src="images/p4.jpg" alt="Projet 7">
+            <div class="portfolio-layer">
+                <h4>Projet 4 : Application web complète (Dév web)</h4>
+                <p>Ce projet illustre mon savoir-faire en développement web...</p>
+                <a href="#" class="in-progress"><i class='bx bx-link-external'></i></a>
+            </div>
+        </div>
+
     </div>
 </section>
 <!-- Contact Section -->
