--- a/projet1.html
+++ b/projet1.html
@@ -30,8 +30,8 @@
         /* Hero section background image */
         
         .hero-background {
-            background-image: url('cfort.jpg'); /* URL de l'image du coffre-fort */
-            background-image: url('cfort.jpg'); 
+            background-image: url('images/cfort.jpg'); /* URL de l'image du coffre-fort */
+            background-image: url('images/cfort.jpg'); 
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -138,24 +138,28 @@
                     <img src="images/P1_1.jpg" alt="Livrable 1" class="livrable-img">
                     <h3 class="text-2xl font-bold mb-3">Livrable 1 : Strong Circuit</h3>
                     <p class="text-gray-400 leading-relaxed">Mise en place du premier niveau de sécurité avec le système de combinaison d'interrupteurs et carte.</p>
+                    <a href="documents/Projet1Livrable1.pdf" class="bg-main-color text-bg-color px-3 py-1 rounded font-semibold hover:bg-white hover:text-bg-color transition duration-300 inline-block mt-2" download>Télécharger</a>
                 </div>
                 <!-- Livrable 2 -->
                 <div class="card bg-gray-800 text-gray-200 shadow-lg p-6">
                     <img src="images/P1_2.jpg" alt="Livrable 2" class="livrable-img">
                     <h3 class="text-2xl font-bold mb-3">Livrable 2 : Card Box</h3>
                     <p class="text-gray-400 leading-relaxed">Développement du prototype physique basé sur Arduino, avec LED et résistances pour gérer les sorties.</p>
+                    <a href="documents/Projet1Livrable2.pdf" class="bg-main-color text-bg-color px-3 py-1 rounded font-semibold hover:bg-white hover:text-bg-color transition duration-300 inline-block mt-2" download>Télécharger</a>
                 </div>
                 <!-- Livrable 3 -->
                 <div class="card bg-gray-800 text-gray-200 shadow-lg p-6">
                     <img src="images/P1_3.jpg" alt="Livrable 3" class="livrable-img">
                     <h3 class="text-2xl font-bold mb-3">Livrable 3 : Algo 3000</h3>
                     <p class="text-gray-400 leading-relaxed">Conception de l'algorithme d'authentification avec différents niveaux de sécurité.</p>
+                    <a href="documents/Projet1Livrable3.pdf" class="bg-main-color text-bg-color px-3 py-1 rounded font-semibold hover:bg-white hover:text-bg-color transition duration-300 inline-block mt-2" download>Télécharger</a>
                 </div>
                 <!-- Livrable 4 -->
                 <div class="card bg-gray-800 text-gray-200 shadow-lg p-6">
                     <img src="images/P1_4.jpg" alt="Livrable 4" class="livrable-img">
                     <h3 class="text-2xl font-bold mb-3">Livrable 4 : Full StrongBox</h3>
                     <p class="text-gray-400 leading-relaxed">Prototype complet avec Arduino et présentation finale du projet au MI7 ( disponible sur mon Github : lmrt0572).</p>
+                    <a href="documents/Projet1Livrable4.pdf" class="bg-main-color text-bg-color px-3 py-1 rounded font-semibold hover:bg-white hover:text-bg-color transition duration-300 inline-block mt-2" download>Télécharger</a>
                 </div>
             </div>
         </div>
