--- a/projet4.html
+++ b/projet4.html
@@ -167,7 +167,7 @@
                     <img src="images/P4_I1.webp" alt="Livrable 0" class="livrable-img">
                     <h3 class="text-xl font-bold mb-2">Livrable 0 : Organisation du projet</h3>
                     <p class="text-gray-400 leading-relaxed mb-2">Présentation de l’équipe projet, reformulation du besoin, organisation et planification générale.</p>
-                    <a href="documents/P4_L0.pdf" class="bg-main-color text-bg-color px-3 py-1 rounded font-semibold hover:bg-white hover:text-bg-color transition duration-300 inline-block mt-2" download>Télécharger</a>
+                    <a href="documents/P4_L0.odt" class="bg-main-color text-bg-color px-3 py-1 rounded font-semibold hover:bg-white hover:text-bg-color transition duration-300 inline-block mt-2" download>Télécharger</a>
                 </div>
                 <!-- Livrable 1 -->
                 <div class="card bg-gray-800 text-gray-200 shadow-lg p-4">
