--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                     <p>Âge <span>19 ans</span></p>
                 </div>
                 <div class="resume-item">
-                    <p>Statut <span>Célibataire</span></p>
+                    <p>Statut <span>étudiant</span></p>
                 </div>
                 <div class="resume-item">
                     <p>Ville <span>Rouen</span></p>
@@ -282,7 +282,7 @@
                     <p>Nationalité <span>Français</span></p>
                 </div>
                 <div class="resume-item">
-                    <p>École <span>CESI</span></p>
+                    <p>École <span>CESI, Rouen</span></p>
                 </div>
                 <div class="resume-item">
                     <p>Année d'études <span>2ème année</span></p>
@@ -294,10 +294,16 @@
                     <p>Mobile <span>(+33) 6 26 60 54 11</span></p>
                 </div>
                 <div class="resume-item">
-                    <p>Email <span>leo.martin1@viacesi.fr</span></p>
+                    <p>Email pro<span>leo.martin1@viacesi.fr</span></p>
+                </div>
+                <div class="resume-item">
+                    <p>Email perso<span>leo.martin0572@gmail.com</span></p>
                 </div>
                 <div class="resume-item">
                     <p>Langues <span>Français, Anglais, Espagnol</span></p>
+                </div>
+                <div class="resume-item">
+                    <p>Soft Skills <span>adaptabilité, collaboration, communication</span></p>
                 </div>
             </div>
         </div>
@@ -373,7 +379,7 @@
         <div class="portfolio-box">
             <img src="images/p4.jpg" alt="Projet 7">
             <div class="portfolio-layer">
-                <h4>Projet 4 : Application web complète (Dév web)</h4>
+                <h4>Projet 7 : Application web complète (Dév web)</h4>
                 <p>Ce projet illustre mon savoir-faire en développement web...</p>
                 <a href="#" class="in-progress"><i class='bx bx-link-external'></i></a>
             </div>
